[#11195] fix(maintenance): address orphan cleanup review feedback